--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/notonthehighstreet/cc3f5205-5187-4ff8-a150-d02ce5552748'>Notonthehighstreet - iOS Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438175-lead-ios-engineer-also-senior-to-mid-level-lifestyle-app-london'>Fulton Garrick Ltd Lead IOS Engineer - Also Senior to Mid Level - Lifestyle App - London | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London  London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -82,7 +86,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wattpad/44962ffb-6786-4e2c-92d9-77b1c64b402f'>Wattpad - iOS Engineer - Premium Squad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wattpad/44962ffb-6786-4e2c-92d9-77b1c64b402f'>Wattpad - iOS Engineer - Premium Squad</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -94,7 +98,7 @@
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/n3twork/job/oUyd5fwu'>N3TWORK Careers - iOS Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/n3twork/job/oUyd5fwu'>N3TWORK Careers - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697948071-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697948071-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -136,7 +140,7 @@
 identification synthetic biology, and machine learning to advance a new 
 paradigm?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4398571002'>Job Application for Senior iOS Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4398571002'>Job Application for Senior iOS Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -179,7 +183,7 @@ user facing iOS apps from scratch. You are proud of your code and can?...</p>
 <p>Oct 9, 2019 ... Are you a highly regarded talented Senior iOS Software Engineer with a passion 
 for delivering high quality applications that help change the world? Then we?...</p>
 <hr/>
-<h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of iOS Engineer (Southampton) at Starling Bank.</p>
 <hr/>
@@ -242,7 +246,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=ohBn9fw8&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=ntnTaMwa'>Farfetch Careers - Senior iOS Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=ohBn9fw8&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=ntnTaMwa'>Farfetch Careers - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
@@ -303,7 +307,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476156002'>Job Application for Senior iOS Engineer at Blink Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476156002'>Job Application for Senior iOS Engineer at Blink Health</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -352,7 +356,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bios-3.workable.com/j/049C7A96E7'>BIOS - Jobs: Medical Mechanical Engineer - Apply online</a></h5> 
+<h5><a href='https://bios-3.workable.com/j/049C7A96E7'>BIOS - Jobs: Medical Mechanical Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -380,18 +384,18 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://breakout.careers/company/square/jobs/senior-ios-engineer-cash-app'>
+<h5><a href='https://breakout.careers/company/square/jobs/senior-ios-engineer-cash-app'>
         Senior iOS Engineer, Cash App Job at Square in Melbourne, VIC |
       Breakout Careers
     </a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999696787869-senior-ios-engineer'>Square Senior iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999696787869-senior-ios-engineer'>Square Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1857012'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1857012'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -399,7 +403,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/413731-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/413731-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -451,10 +455,6 @@ engine.</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/backmarket/0bfaca6d-d93f-4f18-9cb8-18399b01e000'>Back Market - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
-<p>Posted on: 2019-10-03</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/tubitv/jobs/1616813'>Job Application for iOS Engineer at Tubi</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
 
