--- a/android-engineer.html
+++ b/android-engineer.html
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489111002'>Job Application for Android Engineer - Customer Experience at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489111002'>Job Application for Android Engineer - Customer Experience at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://oviva.recruitee.com/o/android-software-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oviva.recruitee.com/o/android-software-engineer'>
       Android Software Engineer - Oviva
     </a></h5> 
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
@@ -92,11 +92,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cricut/743999698069573-senior-android-sw-engineer'>Cricut Senior Android SW Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cricut/743999698069573-senior-android-sw-engineer'>Cricut Senior Android SW Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999697845491-android-engineer-customer-success'>Deezer Android Engineer - Customer Success | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999697845491-android-engineer-customer-success'>Deezer Android Engineer - Customer Success | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -230,7 +230,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341155-senior-android-engineer-m-f-d-hamburg'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Hamburg | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341155-senior-android-engineer-m-f-d-hamburg'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Hamburg | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg  Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -281,7 +281,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/anchor/a4b4d23e-15a8-4f9f-853a-72f6ea9989c9'>Anchor - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/anchor/a4b4d23e-15a8-4f9f-853a-72f6ea9989c9'>Anchor - Android Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -301,7 +301,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -333,7 +333,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -341,7 +341,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -393,7 +393,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -455,7 +455,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/offerup/jobs/1895404'>Job Application for Android Engineer Intern - Summer 2020 at OfferUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/offerup/jobs/1895404'>Job Application for Android Engineer Intern - Summer 2020 at OfferUp</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
